SCHEDULING-1681
- Ability to specify a session-id or a session-id-file as a command-line argument.
- Ability to print session-id on standard output.
- Ability to run in silent mode (execution results, errors will not be printed on standard output)
- Ability to store execution result in a file.